Fix Vite production build

--- a/index.html
+++ b/index.html
@@ -1,26 +1,44 @@
 <!doctype html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+```
+<!-- SCRY favicon -->
+<link rel="icon" type="image/svg+xml" href="/scry.svg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<!-- Correct title -->
+<title>SCRY</title>
+
+<!-- SEO -->
+<meta name="description" content="SCRY Observatory: Real-time analysis of informational bias patterns." />
+<meta name="author" content="Rahul Porwal" />
+
+<!-- Open Graph -->
+<meta property="og:title" content="SCRY" />
+<meta property="og:description" content="SCRY Observatory: Real-time analysis of informational bias patterns." />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="/scry-logo.svg" />
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="SCRY" />
+<meta name="twitter:description" content="SCRY Observatory: Real-time analysis of informational bias patterns." />
+<meta name="twitter:image" content="/scry-logo.svg" />
+```
+
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+
+```
+<!-- THIS IS CRITICAL: use correct path -->
+<script type="module" src="/src/main.tsx"></script>
+```
+
   </body>
 </html>
